# bazelbuild_examples

./: .gitignore  .travis.yml  README.md
ios/HelloWorld/: BUILD  Makefile.bazel
ios/HelloWorld/HelloWorld/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift
ios/HelloWorld2/: Makefile.bazel
ios/HelloWorld2/HelloWorld2/: AppDelegate.swift  BUILD  Info.plist  SceneDelegate.swift  ViewController.swift
ios/HelloWorld2/HelloWorld2/Base.lproj/: Main.storyboard
ios/HelloWorld3/: Makefile.bazel  WORKSPACE
ios/HelloWorld3/HelloWorld3/: AppDelegate.swift  BUILD  Controller.swift  SceneDelegate.swift  ViewController.swift
ios/HelloWorld3/HelloWorld3/Base.lproj/: Main.storyboard
ios/HelloWorld3/TulsiDocument.tulsiproj/: larry.tulsiconf-user  project.tulsiconf
ios/HelloWorld3/TulsiDocument.tulsiproj/Configs/: Full_config.tulsigen
