# make -f Makefile.bazel build_app

build_app:
	bazel build --apple_platform_type=ios HelloWorld2/HelloWorld2

install:
	xcrun simctl install booted bazel-bin/HelloWorld2_archive-root/Payload/HelloWorld2.app

launch:
	xcrun simctl launch booted com.larryaasen.HelloWorld2
	
run: build_app install launch
