# make -f Makefile.bazel build_app

build_app:
	bazel build --apple_platform_type=ios --verbose_failures HelloWorld3/HelloWorld3

install:
	xcrun simctl install booted bazel-bin/HelloWorld3/HelloWorld3_archive-root/Payload/HelloWorld3.app

launch:
	xcrun simctl launch booted com.larryaasen.HelloWorld3
	
run: build_app install launch

generate_xcode_project:
	~/Applications/Tulsi.app/Contents/MacOS/Tulsi -- --genconfig TulsiDocument.tulsiproj:Full_config
